# umz201-hardwaretest-linux

./: Makefile  Makefile.am  README.md  main.c
cmd/: hello.c  hello.h
lib/: libiom.c  libiom.h  libstring.c  libstring.h  libsystem.c  libsystem.h  libuart.c  libuart.h
qmi/: dtiot_hal_qmi.c  dtiot_hal_qmi.h  modemtool.c  modemtool.h
src/: shell.c  shell.h  shell_cfg.h  shell_cmd_list.c  shell_ext.h  terminal.c  terminal.h
testcmd/: play.c  play.h  serial.c  serial.h  test.h  usbnum.c  usbnum.h
